fix: added bigger z-index so text inputs doesnt be higher on z-axis

--- a/src/components/menu-component/menu-component.module.scss
+++ b/src/components/menu-component/menu-component.module.scss
@@ -21,7 +21,7 @@
   position: fixed;
   transform: translateX(0%);
   transition: ease-in 0.5s;
-  z-index: 2;
+  z-index: 4;
   position: fixed;
 }
 
